docs[api]: обновлены контракты mobile api
